syntax="proto3";

package customer;

import "google/protobuf/empty.proto";

option java_package = "com.dailycodebuffer.customer.proto";
option java_multiple_files = true;

service CustomerService {
  rpc ListCustomers(ListCustomerRequest) returns (ListCustomerResponse) {}
}

message CustomerPageRequest {
  optional int32 page = 1;
  optional int32 size = 2;
  optional string sort = 3;
  optional string direction = 4;
}

message ListCustomerRequest {
  CustomerPageRequest page_request = 1;
  optional string first_name = 2;
  optional string last_name = 3;
  optional int32 from_age = 4;
  optional int32 to_age = 5;
  int64 class_id = 6;
  bool all_in_one = 7;
}

message CustomerPageResponse {
  int32 page = 1;
  int32 size = 2;
  int64 total_element = 3;
  int64 total_page = 4;
}

message CustomerGrpcError {
  string code = 1;
  string message = 2;
  map<string, string> errors = 3;
  string exception = 4;
  bool is_client_error = 5;
}

message ListCustomerResponse {
  message Customer {
    int64 id = 1;
    string first_name = 2;
    string last_name = 3;
    int32 age = 4;
    int64 class_id = 5;
  }

  message Data {
    CustomerPageResponse page_response = 1;
    repeated Customer customers = 2;
  }

  bool success = 1;
  oneof response {
    Data data = 2;
    CustomerGrpcError error = 3;
  }
}
